fix: text align in paragraph elements, and hide sidebar when any link is clicked

--- a/src/Main/home/home.css
+++ b/src/Main/home/home.css
@@ -9,6 +9,7 @@
     align-items: center;
     padding-top: 15vh;
     z-index: 2;
+    height: 100vh;
 }
 
 .home::before {
